# gestio

./: .gitignore  AGENTS.md  BUILD.md  README.md  fix_config.py  gestio-launcher.spec  gestio.iss  gestio.spec  git_log.txt  install-mac-linux.sh  launcher.bat  launcher.py  main.py  pyproject.toml  requirements.txt
.agent/workflows/: github-issue.md
.claude/: settings.local.json
.github/: BUILD.md
.github/scripts/: update_download.py
.github/workflows/: build.yml  deploy-site.yml  update-site.yml
.streamlit/: config.toml
backend/: main.py
backend/config/: paths.py
backend/scripts/: migrate_database.py
config/: README.md  logging_config.py  paths.py
distribution/: gestio.iss
docs/: AZURE-SIGNING.md  ROADMAP-FUSIONNEE.md
docs/gestio site/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
domains/home/: README.md
domains/transactions/: GLOSSARY.md  README.md  __init__.py
launcher/: gestio-launcher.spec  launcher.py  launcher_core.py  launcher_ui.py
resources/: EMOJIS_README.md  README.md  emojis.py
resources/icons/: README.md  generate_icons.py
resources/styles/: main.css  responsive.css  theme_v2.css
scripts/: build_archive.py  generate_iss.py  migrate_attachments.py  prepare_dist.py
shared/: README.md  exceptions.py
shared/database/: README.md  connection.py
shared/services/: README.md  __init__.py  security.py
shared/ui/: README.md  __init__.py  batch_uploader.py  friendly_error.py  helpers.py  styles.py  toast_components.py
tests/: QUICKSTART_TESTS.md
(+87 files in other folders)
